<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/background">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/leaves">
        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/welcome"
            android:textSize="28sp"
            android:gravity="center"
            android:textColor="#000000"
            android:textStyle="bold">
        </TextView>

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/leaves">
        </ImageView>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_gravity="center_vertical">

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="30sp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_gravity="center_vertical">
        </TextView>

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="18sp"
            android:paddingLeft="5dp"
            android:background="@drawable/edit_text_bg"
            android:hint="请输入用户名"
            android:layout_marginLeft="10dp"
            android:layout_toEndOf="@+id/text1"
            android:layout_toRightOf="@+id/text1">
        </EditText>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_gravity="center_vertical">

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="30sp"
            android:textColor="#000000"
            android:textStyle="bold">
        </TextView>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="18sp"
            android:hint="请输入密码"
            android:paddingLeft="5dp"
            android:background="@drawable/edit_text_bg"
            android:layout_marginLeft="10dp"
            android:layout_toEndOf="@+id/text2"
            android:inputType="textPassword"
            android:layout_toRightOf="@+id/text2">
        </EditText>

    </RelativeLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal"
        tools:targetApi="o">

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@color/colorPrimary"
            android:text="@string/login"
            android:textAllCaps="false">
        </Button>

        <Button
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/register"
            android:background="@color/colorPrimary"
            android:textAllCaps="false"
            tools:targetApi="o">
        </Button>

    </LinearLayout>

</LinearLayout>